# security-hub-controls

./: README.md  dump-controls  pyproject.toml  security-hub-controls.jsonl
.github/workflows/: main.yml
tutorial/: controls.jsonl  log.txt
tutorial/tutorial/spiders/: quotes_spider.py
