[tool.poetry]
name = "security-hub-controls"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.9.0"
more-itertools = "^9.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
